--- a/Client/View/Content/Login/LoginPanel.axaml
+++ b/Client/View/Content/Login/LoginPanel.axaml
@@ -3,62 +3,62 @@
                 xmlns:view="clr-namespace:Client.View.Content"
                 xmlns:vm="clr-namespace:Client.ViewModel"
                 xmlns:controls="clr-namespace:Client.View.Controls"
+                xmlns:templates="clr-namespace:Client.View.Content.Login.Templates"
                 x:Class="Client.View.Content.Login.LoginPanel">
    <Design.DataContext>
       <vm:LoginWindowViewModel />
    </Design.DataContext>
 
-   <view:LoginBase.Resources>
-      <controls:IconText
-         x:Key="Content.Login"
-         Text="Log in"
-         Source="{StaticResource Icon.Login-Box}"
-         Foreground="{DynamicResource White}" />
-      <controls:IconText
-         x:Key="Content.Reset"
-         Text="Reset"
-         Source="{StaticResource Icon.Key}"
-         Foreground="{DynamicResource White}" />
-   </view:LoginBase.Resources>
+   <UserControl.Styles>
+      <StyleInclude Source="Templates/TitleTemplate.axaml" />
+      <StyleInclude Source="/Styles/LoginButtons.axaml" />
+   </UserControl.Styles>
 
-   <Grid RowDefinitions="Auto, Auto, *, Auto">
-      <TextBlock Grid.Row="0"
-                 VerticalAlignment="Center"
-                 Classes="Bold Title">
-         Welcome back!
-      </TextBlock>
+   <templates:TitleTemplate>
+      <templates:TitleTemplate.Title>
+         <Run Text="Welcome back!" />
+      </templates:TitleTemplate.Title>
+      <templates:TitleTemplate.Subtitle>
+         <Run Text="Click on" />
+         <Run Text="Reset" FontWeight="Bold" />
+         <Run Text="to change your" />
+         <Run Text="password" FontWeight="Bold" />
+         <Run Text="in case you forgot it." />
+      </templates:TitleTemplate.Subtitle>
 
-      <TextBlock Grid.Row="1"
-                 VerticalAlignment="Center"
-                 TextWrapping="Wrap"
-                 Classes="Subtitle">
-         <!-- <Run Text="Click on" /> -->
-         <!-- <Run Text="Reset" FontWeight="Bold" /> -->
-         <!-- <Run Text="to change your" /> -->
-         <!-- <Run Text="password" FontWeight="Bold" /> -->
-         <!-- <Run Text="in case you forgot it." /> -->
-      </TextBlock>
+      <StackPanel Orientation="Vertical">
+         <StackPanel.Styles>
+            <Style Selector="TextBlock.Subtitle">
+               <Setter Property="FontWeight" Value="Bold" />
+               <Setter Property="Margin" Value="0 30.0 0 0" />
+            </Style>
+         </StackPanel.Styles>
 
-      <Border Grid.Row="2" />
+         <TextBox Watermark="Username / Email"
+                  Text="{Binding LoginUsernameOrEmail}" />
+         <TextBox Watermark="Password"
+                  Classes="Password"
+                  Text="{Binding LoginPassword}" />
 
-      <StackPanel Grid.Row="3"
-                  Orientation="Vertical">
-         <TextBox
-            Watermark="Username / Email"
-            Text="{Binding LoginUsernameOrEmail}" />
-         <TextBox
-            Watermark="Password"
-            Classes="Password"
-            Text="{Binding LoginPassword}" />
-         <Button
-            Content="{StaticResource Content.Reset}"
-            Command="{Binding Reset}" />
-         <TextBlock
-            Text="Log in when you're ready!"
-            Classes="Watermark Bold" />
-         <Button
-            Content="{StaticResource Content.Login}"
-            Command="{Binding Login}" />
+         <Button Command="{Binding Reset}">
+            <Button.Content>
+               <controls:Icon
+                  Text="Reset"
+                  Source="{StaticResource Icon.Key-Fill}"
+                  Foreground="{DynamicResource White}" />
+            </Button.Content>
+         </Button>
+
+         <TextBlock Text="Log in when you're ready!"
+                    Classes="Subtitle" />
+         <Button Command="{Binding Login}">
+            <Button.Content>
+               <controls:Icon
+                  Text="Log in"
+                  Source="{StaticResource Icon.Login-Box-Fill}"
+                  Foreground="{DynamicResource White}" />
+            </Button.Content>
+         </Button>
       </StackPanel>
-   </Grid>
+   </templates:TitleTemplate>
 </view:LoginBase>
