--- a/Client/View/LoginWindow.axaml
+++ b/Client/View/LoginWindow.axaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:Client.ViewModel"
         xmlns:controls="clr-namespace:Client.View.Controls"
+        xmlns:client="clr-namespace:Client"
         x:Class="Client.View.LoginWindow"
         ExtendClientAreaChromeHints="OSXThickTitleBar, NoChrome"
         ExtendClientAreaToDecorationsHint="True"
@@ -64,7 +65,7 @@
                           TextWrapping="Wrap">
                   <Run Text="Heast Messenger" />
                   <Run Text="Version" />
-                  <Run Text="{Binding Version}"
+                  <Run Text="{x:Static client:App.Version}"
                        FontWeight="Bold" />
                   <LineBreak />
                   <Run Text="Error:" />
