--- a/Client/Styles/SidebarButtons.axaml
+++ b/Client/Styles/SidebarButtons.axaml
@@ -45,7 +45,7 @@
    </Style>
 
    <Style Selector="Button:pointerover /template/ ContentPresenter">
-      <Setter Property="Background" Value="{DynamicResource Selection-Hover}" />
+      <Setter Property="Background" Value="{DynamicResource Hover}" />
    </Style>
 
    <Style Selector="Button controls|Icon">
